fixed a bug in the view logic, added a pasword field in the fixuters file but this password is generated using our private keys so i dont think we can use the same ones, i left it blank for that reason

--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -22,6 +22,8 @@
 user1:
   name: Karan Toor
   email: karan@karan.com
+  encrypted_password: 
 user2:
   name: Matt Schartman
   email: matt@matt.com
+  encrypted_password: 
